Add `get trips`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ env_logger = "0.8.3"
 anyhow = "1.0.38"
 rusqlite = { version = "0.24.2", features = ["bundled"] }
 indicatif = "0.15.0"
+thiserror = "1.0.24"
