--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,5 +22,5 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: hibou.exe
+          name: hibou
           path: target/release/hibou.exe
