Use serde_repr and serde_rusqlite

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ log = "0.4.14"
 env_logger = "0.8.3"
 anyhow = "1.0.38"
 rusqlite = { version = "0.24.2", features = ["bundled"] }
+serde_rusqlite = "0.26.0"
 indicatif = "0.15.0"
 thiserror = "1.0.24"
+serde_repr = "0.1.6"
