--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,18 @@ edition = "2018"
 [dependencies]
 clap = "3.0.0-beta.2"
 csv = "1.1.5"
-serde = { version = "1", features = ["derive"] }
 log = "0.4.14"
 env_logger = "0.8.3"
 anyhow = "1.0.38"
 rusqlite = { version = "0.24.2", features = ["bundled"] }
-serde_rusqlite = "0.26.0"
 indicatif = "0.15.0"
 thiserror = "1.0.24"
+yaml-rust = "0.4.5"
+serde = { version = "1", features = ["derive"] }
+serde_with = "1.6.4"
 serde_repr = "0.1.6"
+serde_json = "1.0.64"
+serde_yaml = "0.8.17"
+serde_rusqlite = "0.26.0"
+strum = "0.20.0"
+strum_macros = "0.20.1"
