--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ serde_yaml = "0.8.17"
 serde_rusqlite = "0.26.0"
 strum = "0.20.0"
 strum_macros = "0.20.1"
+chrono = { version = "0.4.19", features = ["serde"] }
