--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,9 +20,9 @@ jobs:
             artifact_name: hibou
             asset_name: hibou-x86_64-unknown-linux-musl
           - os: windows-latest
-            target: x86_64-pc-windows-gnu
+            target: x86_64-pc-windows-msvc
             artifact_name: hibou
-            asset_name: hibou-x86_64-pc-windows-gnu
+            asset_name: hibou-x86_64-pc-windows-msvc
           - os: macos-latest
             target: x86_64-apple-darwin
             artifact_name: hibou
@@ -34,7 +34,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          target: ${{ matrix.target }}
           toolchain: stable
           override: true
 
