--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,7 @@ jobs:
             asset_name: hibou-x86_64-unknown-linux-musl
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            artifact_name: hibou
+            artifact_name: hibou.exe
             asset_name: hibou-x86_64-pc-windows-msvc
           - os: macos-latest
             target: x86_64-apple-darwin
