✨ Rename hibou -> Diamant

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hibou"
+name = "diamant"
 version = "0.8.0"
 authors = ["tadashi-aikawa <syou.maman@gmail.com>"]
 edition = "2018"
