--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,20 +13,20 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            artifact_name: hibou
-            asset_name: hibou-x86_64-unknown-linux-gnu
+            artifact_name: diamant
+            asset_name: diamant-x86_64-unknown-linux-gnu
           - os: ubuntu-latest
             target: x86_64-unknown-linux-musl
-            artifact_name: hibou
-            asset_name: hibou-x86_64-unknown-linux-musl
+            artifact_name: diamant
+            asset_name: diamant-x86_64-unknown-linux-musl
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            artifact_name: hibou.exe
-            asset_name: hibou-x86_64-pc-windows-msvc
+            artifact_name: diamant.exe
+            asset_name: diamant-x86_64-pc-windows-msvc
           - os: macos-latest
             target: x86_64-apple-darwin
-            artifact_name: hibou
-            asset_name: hibou-x86_64-apple-darwin
+            artifact_name: diamant
+            asset_name: diamant-x86_64-apple-darwin
 
     runs-on: ${{ matrix.os }}
 
@@ -60,7 +60,7 @@ jobs:
         with:
           type: ${{ job.status }}
           username: GitHub Actions (Failure)
-          job_name: ":hibou_owl: Release ${{ github.ref }} (${{ matrix.os }} ${{ matrix.target }})"
+          job_name: ":diamant-bus: Release ${{ github.ref }} (${{ matrix.os }} ${{ matrix.target }})"
           mention: channel
           mention_if: always
           icon_emoji: "github"
@@ -77,6 +77,6 @@ jobs:
         with:
           type: ${{ job.status }}
           username: GitHub Actions (Success)
-          job_name: ":hibou_owl: Release ${{ github.ref }}"
+          job_name: ":diamant-bus: Release ${{ github.ref }}"
           icon_emoji: ":github:"
           url: ${{ secrets.SLACK_WEBHOOK }}
