--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ csv = "1.1.5"
 log = "0.4.14"
 env_logger = "0.8.3"
 anyhow = "1.0.38"
-rusqlite = { version = "0.24.2", features = ["bundled"] }
+rusqlite = { version = "0.24.2", features = ["bundled", "array"] }
 indicatif = "0.15.0"
 thiserror = "1.0.24"
 yaml-rust = "0.4.5"
